<resources>
    <string name="app_name">DataBindingSample</string>
    <string name="btn_sample_view_binding_bk_activity">View Binding Activity(ButterKnife)</string>
    <string name="btn_sample_view_binding_activity">View Binding Activity</string>
    <string name="btn_sample_view_binding_bk">View Binding(ButterKnife)</string>
    <string name="btn_sample_view_binding">View Binding</string>
    <string name="btn_sample_data_binding">Data Binding</string>
    <string name="btn_sample_observable_data_binding">Observable Data Binding</string>
    <string name="btn_sample_listener_binding">Listener Binding</string>
    <string name="btn_sample_adapter_binding">Adapter Binding</string>
</resources>
