<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="fragment" type="com.yeonsik.databindingsample.databindingsample.fragments.MainFragment"/>
    </data>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DemoActivity"
        >

        <Button
            android:id="@+id/btn_sample_view_binding_bk_activity"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_view_binding_bk_activity"
            android:onClick="@{fragment::sampleViewBindingButterKnifeActivity}"
            />

        <Button
            android:id="@+id/btn_sample_view_binding_activity"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_view_binding_activity"
            android:onClick="@{fragment::sampleViewBindingActivity}"
            />

        <Button
            android:id="@+id/btn_sample_view_binding_bk"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_view_binding_bk"
            android:onClick="@{fragment::sampleViewBindingButterKnife}"
            />

        <Button
            android:id="@+id/btn_sample_view_binding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_view_binding"
            android:onClick="@{fragment::sampleViewBinding}"
            />

        <Button
            android:id="@+id/btn_sample_data_binding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_data_binding"
            android:onClick="@{fragment::sampleDataBinding}"
            />

        <Button
            android:id="@+id/btn_sample_listener_binding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_listener_binding"
            android:onClick="@{fragment::sampleListenerBinding}"
            />

        <Button
            android:id="@+id/btn_sample_adapter_binding"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_sample_adapter_binding"
            android:onClick="@{fragment::sampleAdapterBinding}"
            />

    </LinearLayout>
    </ScrollView>
</layout>